# boot-wrapper-aarch64

./: .gitignore  FDT.pm  Makefile  Makefile.am  boot.S  boot_common.c  cache.S  common.S  configure.ac  gen-cpu-nodes.sh  mmu.S  model.lds.S  ns.S  ns.c  platform.c  psci.S  psci.c  spin.S
arch/aarch64/: boot.S  cache.S  common.S  gic-v3.S  gic.S  mmu.S  ns.S  psci.S  spin.S  utils.S
arch/aarch64/include/asm/: cpu.h  psci.h
include/: compiler.h  cpu.h  psci.h
